# jinja2-simple-tags

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  jinja2_simple_tags.py  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: codeql-analysis.yml  release.yml  tests.yml
tests/: test_args.py  test_container.py  test_context.py  test_escaping.py  test_inclusion.py  test_properties.py  test_standalone.py  test_threadsafe.py
tests/templates/: test_properties.html
tests/templates/footer/: default.html
tests/templates/header/: default.html
tests/templates/input/: default.html
