[metadata]
name = jinja2-simple-tags
version = 0.2.1
description = Base classes for quick-and-easy template tag development
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dldevinc/jinja2-simple-tags
license = BSD
author = Mihail Mishakin
author_email = x896321475@gmail.com
maintainer = Mihail Mishakin
maintainer_email = x896321475@gmail.com
platforms = OS Independent
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Internet :: WWW/HTTP :: Dynamic Content
  Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
python_requires = >= 3.5
install_requires =
  Jinja2
packages = find:
py_modules =
  jinja2_simple_tags

[options.extras_require]
testing =
  pytest
  pytest-xdist

[tool:pytest]
addopts = --showlocals -rfs
filterwarnings =
  ignore:.*Remove the context parameter
norecursedirs =
  dist
  build
  .tox
