[metadata]
name = jinja2-simple-tags
version = 0.2.2
description = Base classes for quick-and-easy template tag development
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dldevinc/jinja2-simple-tags
license = BSD license
author = Mihail Mishakin
author_email = x896321475@gmail.com
maintainer = Mihail Mishakin
maintainer_email = x896321475@gmail.com
platforms = OS Independent
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Software Development :: Libraries :: Python Modules

[bdist_wheel]
universal = 1

[options]
zip_safe = false
python_requires = >= 3.6
install_requires =
  Jinja2
packages = find:
py_modules =
  jinja2_simple_tags

[tool:pytest]
collect_ignore = ['setup.py']
python_paths = tests/
addopts = --showlocals -rf -s
filterwarnings =
  ignore:.*Remove the context parameter
norecursedirs =
  dist
  build
  .tox

[coverage:run]
source = jinja2_simple_tags

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover

  # Don't complain about missing debug-only code:
  def __repr__
  if self\.debug

  # Don't complain if tests don't hit defensive assertion code:
  raise AssertionError
  raise NotImplementedError

  # Don't complain if non-runnable code isn't run:
  if 0:
  if __name__ == .__main__.:
